Fix range/volume sliders not displaying correctly in Firefox/Edge
Range sliders (eg. volume) were not showing the track behind in certain browsers. Added CSS rules so they match webkit-based browsers.

--- a/www/css/fpp.css
+++ b/www/css/fpp.css
@@ -551,6 +551,19 @@ input[type=range]::-webkit-slider-runnable-track {
 	border-radius: 4px;
 }
 
+input[type=range]::-moz-range-track {
+	width: 100%;
+	height: 8px;
+	background: #D9D9D9;
+	border-radius: 4px;
+}
+input[type=range]::-ms-track {
+	width: 100%;
+	height: 8px;
+	background: #D9D9D9;
+	border-radius: 4px;
+}
+
 input[type=range]::-webkit-slider-thumb {
 	-webkit-appearance: none;
 	box-shadow: 3px 3px 8px rgba(0,0,0,0.1) ;
@@ -561,7 +574,31 @@ input[type=range]::-webkit-slider-thumb {
 	width: 35px;
 	height: 35px;
 	margin-top: -12.5px;
-  }
+}
+
+input[type=range]::-moz-range-thumb {
+	-webkit-appearance: none;
+	box-shadow: 3px 3px 8px rgba(0,0,0,0.1) ;
+	border-radius:1.5em;
+	border:1px solid #D2D2D2;
+	background-color: #fff;
+	border-radius:50%;
+	width: 35px;
+	height: 35px;
+	margin-top: -12.5px;
+}
+
+input[type=range]::-ms-thumb {
+	-webkit-appearance: none;
+	box-shadow: 3px 3px 8px rgba(0,0,0,0.1) ;
+	border-radius:1.5em;
+	border:1px solid #D2D2D2;
+	background-color: #fff;
+	border-radius:50%;
+	width: 35px;
+	height: 35px;
+	margin-top: -12.5px;
+}
 
 #playlistSelect{
 
